TP4/obj/ejemplo.output
Terminals unused in grammar

   MAYORIGUAl


Rules useless in parser due to conflicts

   69 literalCadena: LITERAL_CADENA


Estado 36 conflictos: 16 desplazamiento(s)/reducción(ones)
Estado 37 conflictos: 16 desplazamiento(s)/reducción(ones)
Estado 57 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 61 conflictos: 16 desplazamiento(s)/reducción(ones)
Estado 92 conflictos: 16 desplazamiento(s)/reducción(ones)
Estado 98 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 99 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 100 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 101 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 102 conflictos: 16 desplazamiento(s)/reducción(ones)
Estado 103 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 104 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 105 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 106 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 107 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 108 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 109 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 110 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 111 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 124 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 129 conflictos: 2 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | sentenciaDeclaracion '\n'
    5     | sentencia '\n'

    6 sentencia: sentCompuesta
    7          | sentExpresion
    8          | sentSeleccion
    9          | sentIteracion
   10          | sentSalto
   11          | sentEtiquetada

   12 sentCompuesta: '{' listaDeclaraciones listaSentencias '}'

   13 listaDeclaraciones: sentenciaDeclaracion
   14                   | listaDeclaraciones sentenciaDeclaracion

   15 listaSentencias: sentencia
   16                | listaSentencias sentencia

   17 $@1: /* vacío */

   18 sentenciaDeclaracion: TIPO_DATO $@1 listaVarSimples ';'

   19 listaVarSimples: unaVarSimple
   20                | unaVarSimple ',' listaVarSimples

   21 unaVarSimple: ID
   22             | ID operAsignacion exp
   23             | ID operAsignacion literalCadena

   24 operAsignacion: '='
   25               | ASIGNACION_INCREMENTO
   26               | ASIGNACION_DECREMENTO
   27               | ASIGNACION_PRODUCTO
   28               | ASIGNACION_DIVISION

   29 sentExpresion: exp ';'

   30 sentSeleccion: IF '(' exp ')' sentencia
   31              | IF '(' exp ')' sentencia ELSE sentencia
   32              | SWITCH '(' exp ')' sentencia

   33 sentIteracion: WHILE '(' exp ')' sentencia
   34              | DO sentencia WHILE '(' exp ')' ';'
   35              | FOR '(' exp ';' exp ';' exp ')' sentencia

   36 sentEtiquetada: CASE exp ':' sentencia
   37               | DEFAULT ':' sentencia

   38 sentSalto: RETURN exp ';'
   39          | RETURN ';'
   40          | BREAK ';'
   41          | CONTINUE ';'

   42 exp: ID operAsignacion exp
   43    | exp OR exp
   44    | exp AND exp
   45    | exp IGUALDAD exp
   46    | exp DESIGUALDAD exp
   47    | exp MAYORIGUAL exp
   48    | exp '>' exp
   49    | exp MENORIGUAL exp
   50    | exp '<' exp
   51    | exp '+' exp
   52    | exp '-' exp
   53    | exp '*' exp
   54    | exp '/' exp
   55    | exp '%' exp
   56    | exp '^' exp
   57    | INCREMENTO exp
   58    | DECREMENTO exp
   59    | exp INCREMENTO
   60    | exp DECREMENTO
   61    | '-' exp
   62    | '!' exp
   63    | SIZEOF '(' TIPO_DATO ')'
   64    | '(' exp ')'
   65    | ENTERO
   66    | REAL
   67    | LITERAL_CADENA
   68    | ID

   69 literalCadena: LITERAL_CADENA


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5
'!' (33) 62
'%' (37) 55
'(' (40) 30 31 32 33 34 35 63 64
')' (41) 30 31 32 33 34 35 63 64
'*' (42) 53
'+' (43) 51
',' (44) 20
'-' (45) 52 61
'/' (47) 54
':' (58) 36 37
';' (59) 18 29 34 35 38 39 40 41
'<' (60) 50
'=' (61) 24
'>' (62) 48
'^' (94) 56
'{' (123) 12
'}' (125) 12
error (256)
REAL (258) 66
ENTERO (259) 65
LITERAL_CADENA (260) 67 69
OR (261) 43
AND (262) 44
IGUALDAD (263) 45
DESIGUALDAD (264) 46
MAYORIGUAL (265) 47
MENORIGUAL (266) 49
INCREMENTO (267) 57 59
DECREMENTO (268) 58 60
ASIGNACION_INCREMENTO (269) 25
ASIGNACION_DECREMENTO (270) 26
ASIGNACION_PRODUCTO (271) 27
ASIGNACION_DIVISION (272) 28
IF (273) 30 31
ELSE (274) 31
SWITCH (275) 32
WHILE (276) 33 34
DO (277) 34
FOR (278) 35
RETURN (279) 38 39
CONTINUE (280) 41
BREAK (281) 40
CASE (282) 36
DEFAULT (283) 37
TIPO_DATO (284) 18 63
ID (285) 21 22 23 42 68
SIZEOF (286) 63
MAYORIGUAl (287)


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2, en la derecha: 0 2
line (53)
    en la izquierda: 3 4 5, en la derecha: 2
sentencia (54)
    en la izquierda: 6 7 8 9 10 11, en la derecha: 5 15 16 30 31 32
    33 34 35 36 37
sentCompuesta (55)
    en la izquierda: 12, en la derecha: 6
listaDeclaraciones (56)
    en la izquierda: 13 14, en la derecha: 12 14
listaSentencias (57)
    en la izquierda: 15 16, en la derecha: 12 16
sentenciaDeclaracion (58)
    en la izquierda: 18, en la derecha: 4 13 14
$@1 (59)
    en la izquierda: 17, en la derecha: 18
listaVarSimples (60)
    en la izquierda: 19 20, en la derecha: 18 20
unaVarSimple (61)
    en la izquierda: 21 22 23, en la derecha: 19 20
operAsignacion (62)
    en la izquierda: 24 25 26 27 28, en la derecha: 22 23 42
sentExpresion (63)
    en la izquierda: 29, en la derecha: 7
sentSeleccion (64)
    en la izquierda: 30 31 32, en la derecha: 8
sentIteracion (65)
    en la izquierda: 33 34 35, en la derecha: 9
sentEtiquetada (66)
    en la izquierda: 36 37, en la derecha: 11
sentSalto (67)
    en la izquierda: 38 39 40 41, en la derecha: 10
exp (68)
    en la izquierda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68, en la derecha: 22 29 30 31 32
    33 34 35 36 38 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 64
literalCadena (69)
    en la izquierda: 69, en la derecha: 23


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end            desplazar e ir al estado 2
    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    IF              desplazar e ir al estado 8
    SWITCH          desplazar e ir al estado 9
    WHILE           desplazar e ir al estado 10
    DO              desplazar e ir al estado 11
    FOR             desplazar e ir al estado 12
    RETURN          desplazar e ir al estado 13
    CONTINUE        desplazar e ir al estado 14
    BREAK           desplazar e ir al estado 15
    CASE            desplazar e ir al estado 16
    DEFAULT         desplazar e ir al estado 17
    TIPO_DATO       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '\n'            desplazar e ir al estado 23
    '{'             desplazar e ir al estado 24
    '!'             desplazar e ir al estado 25

    line                  ir al estado 26
    sentencia             ir al estado 27
    sentCompuesta         ir al estado 28
    sentenciaDeclaracion  ir al estado 29
    sentExpresion         ir al estado 30
    sentSeleccion         ir al estado 31
    sentIteracion         ir al estado 32
    sentEtiquetada        ir al estado 33
    sentSalto             ir al estado 34
    exp                   ir al estado 35


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   66 exp: REAL .

    $default  reduce usando la regla 66 (exp)


estado 4

   65 exp: ENTERO .

    $default  reduce usando la regla 65 (exp)


estado 5

   67 exp: LITERAL_CADENA .

    $default  reduce usando la regla 67 (exp)


estado 6

   57 exp: INCREMENTO . exp

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 36


estado 7

   58 exp: DECREMENTO . exp

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 37


estado 8

   30 sentSeleccion: IF . '(' exp ')' sentencia
   31              | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 38


estado 9

   32 sentSeleccion: SWITCH . '(' exp ')' sentencia

    '('  desplazar e ir al estado 39


estado 10

   33 sentIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 40


estado 11

   34 sentIteracion: DO . sentencia WHILE '(' exp ')' ';'

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    IF              desplazar e ir al estado 8
    SWITCH          desplazar e ir al estado 9
    WHILE           desplazar e ir al estado 10
    DO              desplazar e ir al estado 11
    FOR             desplazar e ir al estado 12
    RETURN          desplazar e ir al estado 13
    CONTINUE        desplazar e ir al estado 14
    BREAK           desplazar e ir al estado 15
    CASE            desplazar e ir al estado 16
    DEFAULT         desplazar e ir al estado 17
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '{'             desplazar e ir al estado 24
    '!'             desplazar e ir al estado 25

    sentencia       ir al estado 41
    sentCompuesta   ir al estado 28
    sentExpresion   ir al estado 30
    sentSeleccion   ir al estado 31
    sentIteracion   ir al estado 32
    sentEtiquetada  ir al estado 33
    sentSalto       ir al estado 34
    exp             ir al estado 35


estado 12

   35 sentIteracion: FOR . '(' exp ';' exp ';' exp ')' sentencia

    '('  desplazar e ir al estado 42


estado 13

   38 sentSalto: RETURN . exp ';'
   39          | RETURN . ';'

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    ';'             desplazar e ir al estado 43
    '!'             desplazar e ir al estado 25

    exp  ir al estado 44


estado 14

   41 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 45


estado 15

   40 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 46


estado 16

   36 sentEtiquetada: CASE . exp ':' sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 47


estado 17

   37 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 48


estado 18

   18 sentenciaDeclaracion: TIPO_DATO . $@1 listaVarSimples ';'

    $default  reduce usando la regla 17 ($@1)

    $@1  ir al estado 49


estado 19

   42 exp: ID . operAsignacion exp
   68    | ID .

    ASIGNACION_INCREMENTO  desplazar e ir al estado 50
    ASIGNACION_DECREMENTO  desplazar e ir al estado 51
    ASIGNACION_PRODUCTO    desplazar e ir al estado 52
    ASIGNACION_DIVISION    desplazar e ir al estado 53
    '='                    desplazar e ir al estado 54

    $default  reduce usando la regla 68 (exp)

    operAsignacion  ir al estado 55


estado 20

   63 exp: SIZEOF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 56


estado 21

   61 exp: '-' . exp

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 57


estado 22

   64 exp: '(' . exp ')'

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 58


estado 23

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 24

   12 sentCompuesta: '{' . listaDeclaraciones listaSentencias '}'

    TIPO_DATO  desplazar e ir al estado 18

    listaDeclaraciones    ir al estado 59
    sentenciaDeclaracion  ir al estado 60


estado 25

   62 exp: '!' . exp

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 61


estado 26

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 27

    5 line: sentencia . '\n'

    '\n'  desplazar e ir al estado 62


estado 28

    6 sentencia: sentCompuesta .

    $default  reduce usando la regla 6 (sentencia)


estado 29

    4 line: sentenciaDeclaracion . '\n'

    '\n'  desplazar e ir al estado 63


estado 30

    7 sentencia: sentExpresion .

    $default  reduce usando la regla 7 (sentencia)


estado 31

    8 sentencia: sentSeleccion .

    $default  reduce usando la regla 8 (sentencia)


estado 32

    9 sentencia: sentIteracion .

    $default  reduce usando la regla 9 (sentencia)


estado 33

   11 sentencia: sentEtiquetada .

    $default  reduce usando la regla 11 (sentencia)


estado 34

   10 sentencia: sentSalto .

    $default  reduce usando la regla 10 (sentencia)


estado 35

   29 sentExpresion: exp . ';'
   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79
    ';'          desplazar e ir al estado 80


estado 36

   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   57    | INCREMENTO exp .
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79

    OR           [reduce usando la regla 57 (exp)]
    AND          [reduce usando la regla 57 (exp)]
    IGUALDAD     [reduce usando la regla 57 (exp)]
    DESIGUALDAD  [reduce usando la regla 57 (exp)]
    MAYORIGUAL   [reduce usando la regla 57 (exp)]
    MENORIGUAL   [reduce usando la regla 57 (exp)]
    INCREMENTO   [reduce usando la regla 57 (exp)]
    DECREMENTO   [reduce usando la regla 57 (exp)]
    '>'          [reduce usando la regla 57 (exp)]
    '<'          [reduce usando la regla 57 (exp)]
    '+'          [reduce usando la regla 57 (exp)]
    '-'          [reduce usando la regla 57 (exp)]
    '*'          [reduce usando la regla 57 (exp)]
    '/'          [reduce usando la regla 57 (exp)]
    '%'          [reduce usando la regla 57 (exp)]
    '^'          [reduce usando la regla 57 (exp)]
    $default     reduce usando la regla 57 (exp)


estado 37

   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   58    | DECREMENTO exp .
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79

    OR           [reduce usando la regla 58 (exp)]
    AND          [reduce usando la regla 58 (exp)]
    IGUALDAD     [reduce usando la regla 58 (exp)]
    DESIGUALDAD  [reduce usando la regla 58 (exp)]
    MAYORIGUAL   [reduce usando la regla 58 (exp)]
    MENORIGUAL   [reduce usando la regla 58 (exp)]
    INCREMENTO   [reduce usando la regla 58 (exp)]
    DECREMENTO   [reduce usando la regla 58 (exp)]
    '>'          [reduce usando la regla 58 (exp)]
    '<'          [reduce usando la regla 58 (exp)]
    '+'          [reduce usando la regla 58 (exp)]
    '-'          [reduce usando la regla 58 (exp)]
    '*'          [reduce usando la regla 58 (exp)]
    '/'          [reduce usando la regla 58 (exp)]
    '%'          [reduce usando la regla 58 (exp)]
    '^'          [reduce usando la regla 58 (exp)]
    $default     reduce usando la regla 58 (exp)


estado 38

   30 sentSeleccion: IF '(' . exp ')' sentencia
   31              | IF '(' . exp ')' sentencia ELSE sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 81


estado 39

   32 sentSeleccion: SWITCH '(' . exp ')' sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 82


estado 40

   33 sentIteracion: WHILE '(' . exp ')' sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 83


estado 41

   34 sentIteracion: DO sentencia . WHILE '(' exp ')' ';'

    WHILE  desplazar e ir al estado 84


estado 42

   35 sentIteracion: FOR '(' . exp ';' exp ';' exp ')' sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 85


estado 43

   39 sentSalto: RETURN ';' .

    $default  reduce usando la regla 39 (sentSalto)


estado 44

   38 sentSalto: RETURN exp . ';'
   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79
    ';'          desplazar e ir al estado 86


estado 45

   41 sentSalto: CONTINUE ';' .

    $default  reduce usando la regla 41 (sentSalto)


estado 46

   40 sentSalto: BREAK ';' .

    $default  reduce usando la regla 40 (sentSalto)


estado 47

   36 sentEtiquetada: CASE exp . ':' sentencia
   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79
    ':'          desplazar e ir al estado 87


estado 48

   37 sentEtiquetada: DEFAULT ':' . sentencia

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    IF              desplazar e ir al estado 8
    SWITCH          desplazar e ir al estado 9
    WHILE           desplazar e ir al estado 10
    DO              desplazar e ir al estado 11
    FOR             desplazar e ir al estado 12
    RETURN          desplazar e ir al estado 13
    CONTINUE        desplazar e ir al estado 14
    BREAK           desplazar e ir al estado 15
    CASE            desplazar e ir al estado 16
    DEFAULT         desplazar e ir al estado 17
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '{'             desplazar e ir al estado 24
    '!'             desplazar e ir al estado 25

    sentencia       ir al estado 88
    sentCompuesta   ir al estado 28
    sentExpresion   ir al estado 30
    sentSeleccion   ir al estado 31
    sentIteracion   ir al estado 32
    sentEtiquetada  ir al estado 33
    sentSalto       ir al estado 34
    exp             ir al estado 35


estado 49

   18 sentenciaDeclaracion: TIPO_DATO $@1 . listaVarSimples ';'

    ID  desplazar e ir al estado 89

    listaVarSimples  ir al estado 90
    unaVarSimple     ir al estado 91


estado 50

   25 operAsignacion: ASIGNACION_INCREMENTO .

    $default  reduce usando la regla 25 (operAsignacion)


estado 51

   26 operAsignacion: ASIGNACION_DECREMENTO .

    $default  reduce usando la regla 26 (operAsignacion)


estado 52

   27 operAsignacion: ASIGNACION_PRODUCTO .

    $default  reduce usando la regla 27 (operAsignacion)


estado 53

   28 operAsignacion: ASIGNACION_DIVISION .

    $default  reduce usando la regla 28 (operAsignacion)


estado 54

   24 operAsignacion: '=' .

    $default  reduce usando la regla 24 (operAsignacion)


estado 55

   42 exp: ID operAsignacion . exp

    REAL            desplazar e ir al estado 3
    ENTERO          desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    INCREMENTO      desplazar e ir al estado 6
    DECREMENTO      desplazar e ir al estado 7
    ID              desplazar e ir al estado 19
    SIZEOF          desplazar e ir al estado 20
    '-'             desplazar e ir al estado 21
    '('             desplazar e ir al estado 22
    '!'             desplazar e ir al estado 25

    exp  ir al estado 92


estado 56

   63 exp: SIZEOF '(' . TIPO_DATO ')'

    TIPO_DATO  desplazar e ir al estado 93


estado 57

   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO
   61    | '-' exp .

    MAYORIGUAL  desplazar e ir al estado 68
    INCREMENTO  desplazar e ir al estado 70
    DECREMENTO  desplazar e ir al estado 71
    '*'         desplazar e ir al estado 76
    '/'         desplazar e ir al estado 77
    '%'         desplazar e ir al estado 78
    '^'         desplazar e ir al estado 79

    MAYORIGUAL  [reduce usando la regla 61 (exp)]
    INCREMENTO  [reduce usando la regla 61 (exp)]
    DECREMENTO  [reduce usando la regla 61 (exp)]
    $default    reduce usando la regla 61 (exp)


estado 58

   43 exp: exp . OR exp
   44    | exp . AND exp
   45    | exp . IGUALDAD exp
   46    | exp . DESIGUALDAD exp
   47    | exp . MAYORIGUAL exp
   48    | exp . '>' exp
   49    | exp . MENORIGUAL exp
   50    | exp . '<' exp
   51    | exp . '+' exp
   52    | exp . '-' exp
   53    | exp . '*' exp
   54    | exp . '/' exp
   55    | exp . '%' exp
   56    | exp . '^' exp
   59    | exp . INCREMENTO
   60    | exp . DECREMENTO
   64    | '(' exp . ')'

    OR           desplazar e ir al estado 64
    AND          desplazar e ir al estado 65
    IGUALDAD     desplazar e ir al estado 66
    DESIGUALDAD  desplazar e ir al estado 67
    MAYORIGUAL   desplazar e ir al estado 68
    MENORIGUAL   desplazar e ir al estado 69
    INCREMENTO   desplazar e ir al estado 70
    DECREMENTO   desplazar e ir al estado 71
    '>'          desplazar e ir al estado 72
    '<'          desplazar e ir al estado 73
    '+'          desplazar e ir al estado 74
    '-'          desplazar e ir al estado 75
    '*'          desplazar e ir al estado 76
    '/'          desplazar e ir al estado 77
    '%'          desplazar e ir al estado 78
    '^'          desplazar e ir al estado 79
    ')'          desplazar e ir al estado 94


estado 59

   12 sentCompuesta: '{' listaDeclaraciones . listaSentencias '}'
   14 listaDeclaraciones: listaDeclaraciones . sentenciaDeclaracion
